--- a/main.css
+++ b/main.css
@@ -1,129 +1,99 @@
 :root {
-    --brand: #c3c377;
-    --brand-strong: #686843;
-    --soft: #f5edd6;
+    --brand: #5d5d56;
+    --brand-strong: #2d2d2b;
+    --soft: #f3f0e6;
 }
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    list-style: none;
 }
 
 body {
     font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
     font-weight: 100;
-    font-style: normal;
+    text-decoration: none;
     color: var(--brand-strong);
-}
-
-.navbar {
-    background-color: var(--brand);
     font-size: 14px;
 }
 
-.navbar h1 a {
-    text-decoration: none;
-    color: var(--soft);
-}
-
-a:visited {
+a, a:visited {
     text-decoration: none;
     color: inherit;
 }
 
-#menu .nav-link.active,
-#menu .nav-link.focus {
+.container {
+    max-width: 80%;
+    margin: 0 auto;
+}
+
+section, footer {
     background-color: var(--soft);
-    color: var(--brand);
+    padding-bottom: 100px;
 }
 
-#menu .nav-link.active:hover,
-#menu .nav-link.focus:hover,
-#projects .nav-link {
-    color: var(--brand);
+h2, h3 {
+    font-size: 18px;
+    font-weight: bold;
 }
 
-nav .nav-link,
-.navbar-brand,
-.navbar-brand:hover,
-#menu .nav-link:hover {
-    color: var(--soft);
-}
-
-.navbar-toggler {
-    border: none;
-}
-
-span.navbar-toggler-icon {
-    --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-}
+/* HEADER */
 
 .navbar-toggler:focus {
     box-shadow: none;
 }
 
-#slides .container,
-#slides .row,
-#slides .row>*,
-#about .row {
-    padding: 0;
-    border: 0;
-    margin: 0;
-    border: none;
-    flex-wrap: nowrap;
+.navbar {
+    min-height: 10vh;
+    width: 100%;
+    font-size: 14px;
+    background-color: var(--brand);
+    color: var(--soft);
 }
 
-.carousel-item {
+.navbar .nav-link.active,
+.navbar .nav-link.focus,
+.navbar .nav-link:hover {
+    background-color: var(--soft);
+    color: var(--brand-strong);
+}
+
+.nav-link,
+.navbar-brand,
+.navbar-brand:hover {
+    color: var(--soft);
+}
+
+/* CAROUSEL */
+
+.carousel {
+    width: 100%;
     height: 90vh;
 }
 
+.carousel-indicators [data-bs-target] {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
 .carousel-item img {
-    object-position: top;
+    object-position: center;
     object-fit: cover;
     height: 100%;
 }
 
-.carousel-indicators [data-bs-target] {
-    width: 20px;
-    height: 5px;
-    border-radius: 30%;
-}
-
-#color {
-    background-color: var(--brand);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: var(--soft);
-}
-
-#color h3,
-#about h2,
-#about h3  {
-    font-family: "League Script", cursive;
-    font-weight: 500;
-    font-style: bold;
-    font-size: 3rem;
-    margin: 0 0 20px 30px;
-}
-
-#color h3 {
-    transform: rotate(-3deg);
-}
-
-section {
-    background-color: var(--soft);
-    padding-bottom: 100px;
-}
+/* ABOUT */
 
 #about li {
-    list-style: none;
-    display: inline;
+    display: inline-flex;
+    flex-wrap: nowrap;
     margin-right: 30px;
     font-weight: bold;
+    font-size: 14px;
 }
 
 #about a {
@@ -131,65 +101,35 @@ section {
     color: var(--brand)
 }
 
-#about:target,
-#events:target,
-#projects:target,
-#contact:target {
-    padding-top: 150px;
-    margin-top: -100px;
+/* CLASSES */
+
+#classes .nav-link {
+    color: var(--brand);
 }
 
-#projects .nav-link.active,
-#projects .nav-link.focus {
+#classes .nav-link.active,
+#classes .nav-link.focus,
+#contact button {
     background-color: var(--brand);
     color: var(--soft);
 }
 
-.project-images {
+.class-images {
     height: 300px;
 }
 
-.project-images img {
+.class-images img {
     object-fit: cover;
     width: 100%;
     height: 100%;
 }
 
-#contact li {
-    list-style: none;
-    display: inline;
-    padding-right: 10px;
-}
+/* FOOTER  */
 
 #contact a {
-    text-decoration: none;
     color: var(--brand-strong);
 }
 
-#contact button {
-    background-color: var(--brand);
-    color: var(--soft);
-    border: 2px solid var(--soft);
-}
-
-@media (min-width: 992px) {
-    .container, .container-lg, .container-md, .container-sm {
-        max-width: 100%;
-    }
-}
-
-@media (min-width: 992px) {
-    .container, .container-lg, .container-md, .container-sm {
-        max-width: 100%;
-    }
-}
-@media (min-width: 768px) {
-    .container, .container-md, .container-sm {
-        max-width: 100%;
-    }
-}
-@media (min-width: 576px) {
-    .container, .container-sm {
-        max-width: 100%;
-    }
+textarea {
+    resize: none;
 }
